# sampdroid

./: .gitignore  .gitmodules  CMakeLists.txt  GTASA.smali  Makefile  README.md  env.json  helper  helper.py  jvm_helper.cpp  jvm_helper.h  linux_hierarchy.cpp  linux_hierarchy.h  log_client.cpp  log_client.h  main_thread.cpp  main_thread.h  make  menu_handler.cpp  menu_handler.h  nv_threads.cpp  nv_threads.h  outside.cpp  outside.h  patches_helper.h  patches_level.cpp  patches_level.h  patches_macros.h  patches_notes.h  plugin_jni.cpp  settings.cpp  settings.h  texture_runtime.cpp  texture_runtime.h
RenderWare/: RW.cpp  rwcore.h  rwlpcore.h  skeleton.h
android/: jvm_helper.cpp  linux_hierarchy.cpp  plugin_jni.cpp
client/: log_client.cpp  log_client.h  main_thread.cpp
fixes/: nv_threads.cpp
game/: clock.cpp  core_handler.cpp  game_objects.cpp  game_objects.h  game_raii.h  hud_manager.cpp  objects.cpp  objects.h  render.cpp  render2d.cpp  sacore.cpp  sacore.h  state.cpp
game/start/: menu_handler.cpp
inj/: patches_level.cpp
render/: engine.cpp  rtpng.h  rwcore.h  skeleton.h
renderware/: engine_refs.cpp  rtpng.h
rwrefs/: engine.cpp  rtpng.h  rwcore.h  skeleton.h
smali/: GTASA.smali
src/: CMakeLists.txt  engine.cpp  nv_threads.cpp  nv_threads.h  rtpng.h  rwcore.h  skeleton.h  texture_runtime.cpp  texture_runtime.h
src/core/: log_client.cpp  log_client.h  main_thread.cpp  main_thread.h
src/game/: clock.cpp  linux_hierarchy.cpp  linux_hierarchy.h  menu_handler.cpp  menu_handler.h  objects.cpp  objects.h  render.cpp
src/inj/: jvm_helper.cpp  jvm_helper.h  patches_level.cpp  patches_level.h  patches_macros.h  plugin_jni.cpp
src/ui/: imgui_rw.cpp  user_graphics.cpp  user_graphics.h
txt/: texture_runtime.cpp  texture_runtime.h
ui/: imgui_rw.cpp  user_graphics.cpp  user_graphics.h  userint.cpp  userint.h
